Rehecho el index entero
Añadido bootstrap, cards para dejarlo más visible y bonito

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="bg-dark text-light">
+<body class="bg-dark text-light ">
     <div class="row text-center">
         <div class="col">
             <h1>Menú Ejercicios</h1>
@@ -25,64 +25,175 @@
 
     <!-- contenido principal-->
 
-    <div class="container">
+    <div class="container d-flex text-center">
         <div class="p-5">
-            <div class="row m-3">
-                <div class="col-3"><button type="button" class="btn btn-primary text-dark"><a href="./pages/14-05-2021.html">
-                    14/05 Fotos
-                </a></button></div>
-                <div class="col-3"><button type="button" class="btn btn-secondary"><a href="./pages/17-05-2021.html">
-                    17/05 Menú
-                </a></button></div>
-                <div class="col-3"><button type="button" class="btn btn-warning"><a href="./pages/20-05-2021.html">
-                    20/05 Transparencia y posicionamientos
-                </a></button></div>
-                <div class="col-3"><button type="button" class="btn btn-success"><a href="./pages/21-05-2021.html">
-                    21/05 Grid y Jquery
-                </a></button></div>
+            <div class="row m-3 text-dark">
+                <div class="col-3">
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/dog1.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">14/05 Fotos</h5>
+                            <p class="card-text m-0" style="height: 70px;">Primera página con 3 fotos y un encabezado</p>
+                            <a href="./pages/14-05-2021.html" class="btn btn-primary m-0">Ir</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/dog2.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">17/05 Menú</h5>
+                            <p class="card-text m-0" style="height: 70px;">Se añade menu, estilos, efectos en las fotos...</p>
+                            <a href="./pages/17-05-2021.html" class="btn btn-primary">Ir</a>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/dog3.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">20/05 Posicionamientos</h5>
+                            <p class="card-text m-0" style="height: 70px;">Transparencias y los posicionamientos</p>
+                            <a href="./pages/20-05-2021.html" class="btn btn-primary">Ir</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug10.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">21/05 Grid y Jquery</h5>
+                            <p class="card-text m-0" style="height: 70px;">Añadimos GRID y efectos con Jquery + modo noche</p>
+                            <a href="./pages/21-05-2021.html" class="btn btn-primary">Ir</a>
+                        </div>
+
+
+
+
+
+                    </div>
+                </div>
             </div>
-            <div class="row m-3">
+            <div class="row m-3 text-dark">
                 <div class="col-3">
-                    <button type="button" class="btn btn-info"><a href="./pages/24-05-2021.html">
-                        24/05 Uso de Less
-                    </a></button>
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug11.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">24/05 Uso de Less</h5>
+                            <p class="card-text m-0" style="height: 70px;">Usamos less en el css</p>
+                            <a href="./pages/24-05-2021.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug12.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">24/05 Uso de BootStrap</h5>
+                            <p class="card-text m-0" style="height: 70px;">Rehacemos la página con BootStrap + Galería</p>
+                            <a href="./pages/24-05-2021b.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
+
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-light"><a href="./pages/24-05-2021b.html">
-                        24/05 Uso de BootStrap
-                    </a></button>
+
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug13.jpeg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">31/05 XML usuarios</h5>
+                            <p class="card-text m-0" style="height: 70px;">Empezamos con llamadas a un XML para mostrar datos</p>
+                            <a href="./pages/31-05-2021b.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-primary"><a href="./pages/31-05-2021.html">
-                        31/05 XML usuarios
-                    </a></button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
-                        03/06 XML e Imágenes
-                    </a></button>
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug14.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">03/06 XML e Imágenes</h5>
+                            <p class="card-text m-0" style="height: 70px;">Añadimos al XML direcciones de imágenes para mostrar</p>
+                            <a href="./pages/03-06-2021/index.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
-            <div class="row m-3">
-                <div class="col">
-                    <button type="button" class="btn btn-warning"><a href="./pages/03-06-2021/carrusel.html">
-                        04/06 XML Carrusel
-                    </a></button>
+            <div class="row m-3 text-dark">
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug15.jpeg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">04/06 XML Carrusel</h5>
+                            <p class="card-text m-0" style="height: 70px;">Añadido un carrusel en html(básico)</p>
+                            <a href="./pages/03-06-2021/carrusel.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
+
+
+
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-danger"><a href="./pages/03-06-2021/04-06-2021.html">
-                        04/06 XML FlexBox
-                    </a></button>
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug4.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">04/06 XML FlexBox</h5>
+                            <p class="card-text m-0" style="height: 70px;">Usamos flexbox en el XML</p>
+                            <a href="./pages/03-06-2021/04-06-2021.html" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-success"><a href="./pages/03-06-2021/index.html">
-                        07/06
-                    </a></button>
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug5.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">07/06</h5>
+                            <p class="card-text m-0" style="height: 70px;">07/06</p>
+                            <a href="" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
+
+
                 </div>
-                <div class="col">
-                    <button type="button" class="btn btn-primary"><a href="./pages/03-06-2021/index.html">
-                        10/06
-                    </a></button>
+                <div class="col-3">
+
+                    <div class="card" style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug6.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">10/06</h5>
+                            <p class="card-text m-0" style="height: 70px;">10/06</p>
+                            <a href="" class="btn btn-primary">Ir</a>
+                        </div>
+                    </div>
+
+
+
+
                 </div>
             </div>
             <div class="row m-3">
@@ -127,9 +238,9 @@
 
 
     </div>
-    <div class="row text-center position-absolute bottom-0 end-50">
-        <div class="col">
-            2021 Miguel A. Sánchez
+    <div class="row text-center fixed-bottom">
+        <div class="col-12">
+            2021 Miguel A. Sánchez Miranda
         </div>
     </div>
 
