--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug5.jpg" class="card-img-top" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">07/06</h5>
-                            <p class="card-text m-0" style="height: 70px;">07/06</p>
-                            <a href="" class="btn btn-primary">Ir</a>
+                            <h5 class="card-title">07/06 Multimedia</h5>
+                            <p class="card-text m-0" style="height: 70px;">Uso de archivos Multimedia HTML5</p>
+                            <a href="./pages/07-06-2021.html" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
 
