--- a/pages/07-06-2021.html
+++ b/pages/07-06-2021.html
@@ -11,7 +11,7 @@
     <title>Multimedia</title>
     <style>
         video {
-            width: 60%;
+            width: 100%;
         }
     </style>
 </head>
@@ -21,16 +21,23 @@
         <div class="row">
             <div class="col-12">
                 <h5>Multimedia</h5>
+                <h6>Dar play a ambos para el video y el audio :)</h6>
             </div>
         </div>
         <div class="row">
             <div class="col">
 
-                <video width="400px" controls crossorigin>
-                    <source src="../assets/videos/GIMS.wmv" type="video/wmv">
-                    <!-- <track kind="subtitles" src="https://juanillodg.github.io/CMV-Publica/stream/subtitles.vtt" srclang="es" label="spanish" default> -->
-                    <p>Your browser doesn't support HTML5 video. Here is a <a href="../multimedia/Death Star - 33050.mp4">link to the video</a> instead.</p>
+                <video controls loop>
+                    
+                    <source src="../assets/videos/Cat - 3740.mp4"/>
+                    <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
                 </video>
+
+                <audio controls>
+                        <source src="../assets/videos/piano.mp3"/>
+                        
+                        </audio>
+
 
 
             </div>
