--- a/pages/07-06-2021.html
+++ b/pages/07-06-2021.html
@@ -27,13 +27,13 @@
         <div class="row">
             <div class="col">
 
-                <video controls loop>
+                <video controls loop autoplay>
                     
                     <source src="../assets/videos/Cat - 3740.mp4"/>
                     <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
                 </video>
 
-                <audio controls>
+                <audio controls autoplay>
                         <source src="../assets/videos/piano.mp3"/>
                         
                         </audio>
