--- a/pages/07-06-2021.html
+++ b/pages/07-06-2021.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-12">
 
                 <video controls loop autoplay>
                     
@@ -42,7 +42,57 @@
 
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-6">
+                <h6>Imagen con Canvas</h6>
+                <canvas id="miCuadro" width="310" height="150" style="border-radius: 15px;">
+                    Your browser does not support the HTML canvas tag.</canvas>
+
+            </div>
+            <div class="col-6">
+
+                <h6>Imagen con SVG</h6>
+                <svg height="180" width="350">
+                    <defs>
+                        <linearGradient id="grad1" x1="50%" y1="25%" x2="100%" y2="95%">
+                        <stop offset="0%" style="stop-color:rgb(4, 20, 61);stop-opacity:1"/>
+                        <stop offset="50%" style="stop-color:rgb(150, 6, 6);stop-opacity:1"/>
+                        <stop offset="100%" style="stop-color:rgb(155, 180, 12);stop-opacity:1"/>
+                      </linearGradient>
+                    </defs>
+                    <rect x="30" y="0" rx="50" ry="50" width="310" height="150"
+                    fill="url(#grad1)" />
+                    <text fill="#ffffff" font-size="35" font-family="Comic Sans" x="50" y="86">Deutsche Solutions</text>
+                    Sorry, your browser does not support inline SVG.
+                </svg>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p>2021 Miguel Angel Sánchez Miranda</p>
+            </div>
+        </div>
     </div>
+
+
+    <script>
+        var c = document.getElementById("miCuadro");
+        var ctx = c.getContext("2d");
+
+
+        // Create gradient
+        var grd = ctx.createLinearGradient(0, 0, 200, 0);
+        grd.addColorStop(0, "#eeeeee");
+        grd.addColorStop(0.5, "#000000");
+        grd.addColorStop(1, "#df7116");
+
+
+        // Fill with gradient
+        ctx.fillStyle = grd;
+        ctx.fillRect(10, 10, 350, 180);
+    </script>
 
 
 </body>
