estilos en index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row m-3 text-dark">
                 <div class="col-3">
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/dog1.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <img src="./assets/images/dog1.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">14/05 Fotos</h5>
                             <p class="card-text m-0" style="height: 70px;">Primera página con 3 fotos y un encabezado</p>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-3">
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/dog2.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <img src="./assets/images/dog2.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">17/05 Menú</h5>
                             <p class="card-text m-0" style="height: 70px;">Se añade menu, estilos, efectos en las fotos...</p>
@@ -53,7 +53,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/dog3.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <img src="./assets/images/dog3.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">20/05 Posicionamientos</h5>
                             <p class="card-text m-0" style="height: 70px;">Transparencias y los posicionamientos</p>
@@ -65,7 +65,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug10.jpg" class="card-img-top" style="min-height: 200px;" alt="...">
+                        <img src="./assets/images/pug10.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">21/05 Grid y Jquery</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadimos GRID y efectos con Jquery + modo noche</p>
@@ -83,7 +83,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug11.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug11.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">24/05 Uso de Less</h5>
                             <p class="card-text m-0" style="height: 70px;">Usamos less en el css</p>
@@ -96,8 +96,8 @@
 
                 <div class="col-3">
 
-                    <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug12.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                    <div class="card"style="width: 18rem; height: 375px;">
+                        <img src="./assets/images/pug12.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">24/05 Uso de BootStrap</h5>
                             <p class="card-text m-0" style="height: 70px;">Rehacemos la página con BootStrap + Galería</p>
@@ -112,7 +112,7 @@
 
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug13.jpeg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug13.jpeg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">31/05 XML usuarios</h5>
                             <p class="card-text m-0" style="height: 70px;">Empezamos con llamadas a un XML para mostrar datos</p>
@@ -124,7 +124,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug14.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug14.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">03/06 XML e Imágenes</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadimos al XML direcciones de imágenes para mostrar</p>
@@ -139,7 +139,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug15.jpeg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug15.jpeg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">04/06 XML Carrusel</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadido un carrusel en html(básico)</p>
@@ -155,7 +155,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug4.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug4.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">04/06 XML FlexBox</h5>
                             <p class="card-text m-0" style="height: 70px;">Usamos flexbox en el XML</p>
@@ -168,7 +168,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug5.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug5.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">07/06 Multimedia</h5>
                             <p class="card-text m-0" style="height: 70px;">Uso de archivos Multimedia HTML5</p>
@@ -183,7 +183,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug6.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug6.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">10/06</h5>
                             <p class="card-text m-0" style="height: 70px;">10/06</p>
