--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container d-flex text-center">
         <div class="p-5">
             <div class="row m-3 text-dark">
-                <div class="col-3 col-sm-6">
+                <div class="col-3">
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog1.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-6">
+                <div class="col-3">
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog2.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
@@ -50,7 +50,7 @@
 
                     </div>
                 </div>
-                <div class="col-3 col-sm-6">
+                <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog3.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
@@ -62,7 +62,7 @@
 
                     </div>
                 </div>
-                <div class="col-3 col-sm-6">
+                <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug10.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
