--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 <div class="col-3">
 
-                    <div class="card"style="width: 18rem; height: 375px;">
+                    <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug12.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">24/05 Uso de BootStrap</h5>
@@ -116,7 +116,7 @@
                         <div class="card-body">
                             <h5 class="card-title">31/05 XML usuarios</h5>
                             <p class="card-text m-0" style="height: 70px;">Empezamos con llamadas a un XML para mostrar datos</p>
-                            <a href="./pages/31-05-2021b.html" class="btn btn-primary">Ir</a>
+                            <a href="./pages/31-05-2021.html" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
 
