--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog1.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">14/05 Fotos</h5>
+                            <h5 class="card-title">Tarea 1</h5>
                             <p class="card-text m-0" style="height: 70px;">Primera página con 3 fotos y un encabezado</p>
                             <a href="./pages/14-05-2021.html" class="btn btn-primary m-0">Ir</a>
                         </div>
@@ -67,7 +67,7 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug10.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">21/05 Grid y Jquery</h5>
+                            <h5 class="card-title">Tarea 2</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadimos GRID y efectos con Jquery + modo noche</p>
                             <a href="./pages/21-05-2021.html" class="btn btn-primary">Ir</a>
                         </div>
@@ -85,7 +85,7 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug11.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">24/05 Uso de Less</h5>
+                            <h5 class="card-title">Tarea 3</h5>
                             <p class="card-text m-0" style="height: 70px;">Usamos less en el css</p>
                             <a href="./pages/24-05-2021.html" class="btn btn-primary">Ir</a>
                         </div>
@@ -99,7 +99,7 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug12.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">24/05 Uso de BootStrap</h5>
+                            <h5 class="card-title">Tarea 4</h5>
                             <p class="card-text m-0" style="height: 70px;">Rehacemos la página con BootStrap + Galería</p>
                             <a href="./pages/24-05-2021b.html" class="btn btn-primary">Ir</a>
                         </div>
@@ -170,7 +170,7 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug5.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">07/06 Multimedia</h5>
+                            <h5 class="card-title">Tarea 6</h5>
                             <p class="card-text m-0" style="height: 70px;">Uso de archivos Multimedia HTML5</p>
                             <a href="./pages/07-06-2021.html" class="btn btn-primary">Ir</a>
                         </div>
