--- a/pages/tarea5.html
+++ b/pages/tarea5.html
@@ -12,8 +12,119 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="bg-dark">
+    <div class="container">
+        <div class="row">
 
+            <div class="col-12 text-light text-center">
+
+                <h1>Imágenes bonitas</h1>
+                <h2>Carlino/Pug</h2>
+
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-2">
+                <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action btn-primary" aria-current="true">
+                      Home
+                    </button>
+                    <button type="button" class="list-group-item list-group-item-action btn-primary">Galería</button>
+                    <button type="button" class="list-group-item list-group-item-action btn-primary">Blog</button>
+                    <button type="button" class="list-group-item list-group-item-action btn-primary">Contacto</button>
+
+                </div>
+            </div>
+            <div class="col-10">
+                <div id="carouselExampleCaptions" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../assets/images/dog1.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino haciendo deporte</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/dog2.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino de fiesta</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/dog3.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino comestible</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/pug4.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/pug5.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/pug6.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                        </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                        </button>
+
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="parrafo">
+                    <h3> Cualidades del carlino</h5>
+                        <p> El carlino es un perro muy payaso, que hace sonreír a los humanos, no solo por sus extrañas facciones con profundas arrugas, hocico chato y grandes ojos negros, sino también por su excepcional sentido del humor. Cada día descubre
+                            nuevas tonterías con las que hacer reír a su cuidador. El perro pug es muy juguetón y, a pesar de sus cortas piernas, es muy dinámico. Aunque no lo parezca, en las carreras de obstáculos, los juegos de habilidad o incluso como
+                            acompañante en cortas excursiones en bici, esta raza de perros se muestra alegre, divertida y relajada. Al mismo tiempo es un can muy digno que disfruta mucho de la tranquilidad. Le encanta dormir mucho y roncar en la cama,
+                            el sofá o sobre el regazo de su humano, pero no es un perrito faldero.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center text-light">
+                2021 Miguel A. Sánchez Miranda
+            </div>
+        </div>
+
+
+    </div>
 
 
 </body>
