terminando ejercicio tema5

--- a/pages/03-06-2021/tarea5.html
+++ b/pages/03-06-2021/tarea5.html
@@ -19,7 +19,7 @@
 
             <div class="col-12 text-light text-center">
 
-                <h1>Uso de Flex</h1>
+                <h1>Uso de Flex con FlipBox</h1>
                 <h2>Carlino/Pug</h2>
 
             </div>
@@ -43,6 +43,7 @@
 
             <div class="col-10 text-dark ">
 
+
                 <div id="contenido" class="d-flex flex-wrap">
 
 
@@ -57,17 +58,7 @@
 
 
 
-        <div class="row mt-5">
-            <div class="col">
-                <div class="parrafo bg-warning bg-gradient rounded-2 p-3">
-                    <h3> Cualidades del carlino</h5>
-                        <p> El carlino es un perro muy payaso, que hace sonreír a los humanos, no solo por sus extrañas facciones con profundas arrugas, hocico chato y grandes ojos negros, sino también por su excepcional sentido del humor. Cada día descubre
-                            nuevas tonterías con las que hacer reír a su cuidador. El perro pug es muy juguetón y, a pesar de sus cortas piernas, es muy dinámico. Aunque no lo parezca, en las carreras de obstáculos, los juegos de habilidad o incluso como
-                            acompañante en cortas excursiones en bici, esta raza de perros se muestra alegre, divertida y relajada. Al mismo tiempo es un can muy digno que disfruta mucho de la tranquilidad. Le encanta dormir mucho y roncar en la cama,
-                            el sofá o sobre el regazo de su humano, pero no es un perrito faldero.</p>
-                </div>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col text-center text-light">
                 2021 Miguel A. Sánchez Miranda
