--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug14.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">03/06 XML e Imágenes</h5>
+                            <h5 class="card-title">Tarea 5</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadimos al XML direcciones de imágenes para mostrar</p>
-                            <a href="./pages/03-06-2021/index.html" class="btn btn-primary">Ir</a>
+                            <a href="./pages/03-06-2021/tarea5.html" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
 
@@ -185,8 +185,8 @@
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug6.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">10/06</h5>
-                            <p class="card-text m-0" style="height: 70px;">10/06</p>
+                            <h5 class="card-title">10 y 14 Drupal</h5>
+                            <p class="card-text m-0" style="height: 70px;">Página de Drupal</p>
                             <a href="" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
 
                 </div>
             </div>
-            <div class="row m-3">
+            <!-- <div class="row m-3">
                 <div class="col-3">
                     <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
                         11/06 
@@ -217,7 +217,7 @@
                         18/06 
                     </a></button>
                 </div>
-            </div>
+            </div> -->
 
 
 
