--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug13.jpeg" class="card-img-top gris" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug13.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">31/05 XML usuarios</h5>
                             <p class="card-text m-0" style="height: 70px;">Empezamos con llamadas a un XML para mostrar datos</p>
@@ -139,7 +139,7 @@
                 <div class="col-3">
 
                     <div class="card" style="width: 18rem; height: 375px;">
-                        <img src="./assets/images/pug15.jpeg" class="card-img-top gris" style="height: 200px;" alt="...">
+                        <img src="./assets/images/pug15.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">04/06 XML Carrusel</h5>
                             <p class="card-text m-0" style="height: 70px;">Añadido un carrusel en html(básico)</p>
