--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container d-flex text-center">
         <div class="p-5">
             <div class="row m-3 text-dark">
-                <div class="col-3">
-                    <div class="card" style="width: 18rem; height: 375px;">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
+                    <div class="card"  style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog1.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Tarea 1</h5>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog2.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
@@ -50,7 +50,7 @@
 
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog3.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
@@ -62,7 +62,7 @@
 
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug10.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="row m-3 text-dark">
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug11.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
@@ -94,7 +94,7 @@
 
                 </div>
 
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug12.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
@@ -108,7 +108,7 @@
 
 
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
 
                     <div class="card" style="width: 18rem; height: 375px;">
@@ -121,7 +121,7 @@
                     </div>
 
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug14.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="row m-3 text-dark">
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug15.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
@@ -152,7 +152,7 @@
 
 
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug4.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
@@ -165,7 +165,7 @@
 
 
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug5.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
