--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="p-5">
             <div class="row m-3 text-dark">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
-                    <div class="card"  style="width: 18rem; height: 375px;">
+                    <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/dog1.jpg" class="card-img-top gris" style="min-height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Tarea 1</h5>
@@ -180,7 +180,7 @@
 
 
                 </div>
-                <div class="col-3">
+                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12  mt-2">
 
                     <div class="card" style="width: 18rem; height: 375px;">
                         <img src="./assets/images/pug6.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
