--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="card-body">
                             <h5 class="card-title">10 y 14 Drupal</h5>
                             <p class="card-text m-0" style="height: 70px;">Página de Drupal</p>
-                            <a href="" class="btn btn-primary">Ir</a>
+                            <a href="./pages/drupal.html" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
 
@@ -196,28 +196,7 @@
 
                 </div>
             </div>
-            <!-- <div class="row m-3">
-                <div class="col-3">
-                    <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
-                        11/06 
-                    </a></button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
-                        14/06 
-                    </a></button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
-                        17/06 
-                    </a></button>
-                </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-secondary"><a href="./pages/03-06-2021/index.html">
-                        18/06 
-                    </a></button>
-                </div>
-            </div> -->
+
 
 
 
