--- a/pages/drupal.html
+++ b/pages/drupal.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Video Drupal</title>
 </head>
 
 <body>
+
+    <div class="container text-center bg-dark text-light">
+        <div class="row">
+            <div class="col-12">
+                <h5>Video de Drupal</h5>
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+
+                <!-- <video controls loop autoplay>
+                    
+                    <source src="../assets/videos/Cat - 3740.mp4"/>
+                    <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
+                </video> -->
+                https://drive.google.com/file/d/1f7lmVb04CS8H7XQaVDwfPW5ax_J_eKaJ/view?usp=sharing
+
+            </div>
+        </div>
 
 </body>
 
