--- a/pages/drupal.html
+++ b/pages/drupal.html
@@ -9,9 +9,9 @@
     <title>Video Drupal</title>
 </head>
 
-<body>
+<body bg-dark>
 
-    <div class="container text-center bg-dark text-light">
+    <div class="container text-center text-light">
         <div class="row">
             <div class="col-12">
                 <h5>Video de Drupal</h5>
@@ -25,7 +25,8 @@
                     
                     <source src="../assets/videos/Cat - 3740.mp4"/>
                     <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
-                </video> -->
+                </video>-->
+
                 https://drive.google.com/file/d/1f7lmVb04CS8H7XQaVDwfPW5ax_J_eKaJ/view?usp=sharing
 
             </div>
