--- a/pages/drupal.html
+++ b/pages/drupal.html
@@ -9,7 +9,7 @@
     <title>Video Drupal</title>
 </head>
 
-<body bg-dark>
+<body class="bg-dark">
 
     <div class="container text-center text-light">
         <div class="row">
@@ -27,7 +27,7 @@
                     <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
                 </video>-->
 
-                https://drive.google.com/file/d/1f7lmVb04CS8H7XQaVDwfPW5ax_J_eKaJ/view?usp=sharing
+                <a class="link-warning" href="">https://drive.google.com/file/d/1f7lmVb04CS8H7XQaVDwfPW5ax_J_eKaJ/view?usp=sharing</a>
 
             </div>
         </div>
