--- a/pages/drupal.html
+++ b/pages/drupal.html
@@ -27,7 +27,8 @@
                     <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
                 </video>-->
 
-                <a class="link-warning" href="">https://drive.google.com/file/d/1f7lmVb04CS8H7XQaVDwfPW5ax_J_eKaJ/view?usp=sharing</a>
+                <a class="link-warning" href="https://drive.google.com/file/d/19VMMp7IW9l5vX2w_SCPasnWvlCnBkgjK/view?usp=sharing">Enlace al video en Google Drive</a><br>
+                <a href="/index">Volver</a>
 
             </div>
         </div>
