--- a/pages/drupal.html
+++ b/pages/drupal.html
@@ -14,7 +14,7 @@
     <div class="container text-center text-light">
         <div class="row">
             <div class="col-12">
-                <h5>Video de Drupal</h5>
+                <h3>Video de Drupal</h3>
                 <br>
             </div>
         </div>
@@ -27,9 +27,14 @@
                     <track kind="subtitles" src="../assets/videos/subs.vtt" srclang="es" label="spanish" default>
                 </video>-->
 
-                <a class="link-warning" href="https://drive.google.com/file/d/19VMMp7IW9l5vX2w_SCPasnWvlCnBkgjK/view?usp=sharing">Enlace al video en Google Drive</a><br>
-                <a href="/index">Volver</a>
+                <a class="link-warning btn" href="https://drive.google.com/file/d/19VMMp7IW9l5vX2w_SCPasnWvlCnBkgjK/view?usp=sharing">Enlace al video en Google Drive</a><br>
+                <a class="btn btn-primary" href="../index.html">Volver</a>
 
+            </div>
+        </div>
+        <div class="row text-center fixed-bottom">
+            <div class="col-12">
+                2021 Miguel A. Sánchez Miranda
             </div>
         </div>
 
