--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <img src="./assets/images/pug6.jpg" class="card-img-top gris" style="height: 200px;" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">10 y 14 Drupal</h5>
-                            <p class="card-text m-0" style="height: 70px;">Página de Drupal</p>
+                            <p class="card-text m-0" style="height: 70px;">Vídeo de Drupal</p>
                             <a href="./pages/drupal.html" class="btn btn-primary">Ir</a>
                         </div>
                     </div>
